Feature/add flags and adjustments (#84)
* feat: added flags and updated apis and models

* feat: added operator api and tests

* feat: added exim

* fix: sonar issues
