# src/main/openapi/openapi-internal.yaml
@@ -240,8 +240,12 @@ paths:
             schema:
               $ref: '#/components/schemas/ParameterUpdate'
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Parameter'
         "400":
           description: Bad Request
           content:
@@ -272,6 +276,56 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
+  /parameters/export:
+    post:
+      security:
+        - oauth2: [ ocx-pa:all, ocx-pa:read ]
+      tags:
+        - parameters
+      description: Export list of parameters
+      operationId: exportParameters
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExportParameterRequest'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ParameterSnapshot'
+        "404":
+          description: No parameters founds
+  /parameters/import:
+    post:
+      security:
+        - oauth2: [ ocx-pa:all, ocx-pa:write ]
+      tags:
+        - parameters
+      description: Import parameters
+      operationId: importParameters
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ParameterSnapshot'
+      responses:
+        "200":
+          description: Import result
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ImportParameterResponse'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
 components:
   securitySchemes:
     oauth2:
@@ -285,6 +339,46 @@ components:
             ocx-pa:write: Grants write access
             ocx-pa:delete: Grants access to delete operations
   schemas:
+    ExportParameterRequest:
+      type: object
+      properties:
+        productNames:
+          type: array
+          uniqueItems: true
+          items:
+            type: string
+    ParameterSnapshot:
+      type: object
+      properties:
+        id:
+          type: string
+          minLength: 10
+          description: ID of the request
+        created:
+          $ref: '#/components/schemas/OffsetDateTime'
+        products:
+          type: object
+          nullable: false
+          additionalProperties:
+            type: array
+            items:
+              $ref: '#/components/schemas/EximParameter'
+    ImportParameterResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          minLength: 10
+          description: ID of the request
+        parameters:
+          additionalProperties:
+            $ref: '#/components/schemas/ImportParameterResponseStatus'
+    ImportParameterResponseStatus:
+      type: string
+      enum:
+        - UPDATE
+        - CREATED
+        - SKIP
     ParameterCreate:
       type: object
       properties:
@@ -334,6 +428,29 @@ components:
           type: object
         importValue:
           type: object
+        operator:
+          type: boolean
+        isInHistory:
+          type: boolean
+    EximParameter:
+      type: object
+      properties:
+        displayName:
+          type: string
+        description:
+          type: string
+        applicationId:
+          type: string
+        productName:
+          type: string
+        name:
+          type: string
+        value:
+          type: object
+        importValue:
+          type: object
+        operator:
+          type: boolean
     History:
       type: object
       properties:
@@ -364,7 +481,7 @@ components:
           type: object
         defaultValue:
           type: object
-        type:
+        description:
           type: string
         instanceId:
           type: string
@@ -385,10 +502,6 @@ components:
           type: integer
           format: int32
           default: 100
-        type:
-          type: array
-          items:
-            type: string
     HistoryPageResult:
       type: object
       properties:
@@ -431,6 +544,8 @@ components:
             $ref: '#/components/schemas/Parameter'
     ParameterUpdate:
       type: object
+      required:
+        - modificationCount
       properties:
         value:
           type: object
@@ -438,6 +553,9 @@ components:
           type: string
         description:
           type: string
+        modificationCount:
+          format: int32
+          type: integer
     Product:
       type: object
       properties:
@@ -507,8 +625,6 @@ components:
           type: string
         name:
           type: string
-        displayName:
-          type: string
         pageNumber:
           format: int32
           description: The number of page
@@ -519,6 +635,10 @@ components:
           description: The size of page
           default: 100
           type: integer
+    OffsetDateTime:
+      format: date-time
+      type: string
+      example: 2022-03-10T12:15:50-04:00
     ProblemDetailResponse:
       type: object
       properties:
